// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render open component 1`] = `
<nav
  className="workspace-nav"
>
  <ul
    className="workspace-nav-list"
  >
    <WorkspaceNavComponent
      component={
        Object {
          "branchLike": undefined,
          "key": "foo",
        }
      }
      key="component-foo"
      onClose={[MockFunction]}
      onOpen={[MockFunction]}
    />
    <WorkspaceNavRule
      key="rule-qux"
      onClose={[MockFunction]}
      onOpen={[MockFunction]}
      rule={
        Object {
          "key": "qux",
          "organization": "org",
        }
      }
    />
  </ul>
</nav>
`;

exports[`should not render open rule 1`] = `
<nav
  className="workspace-nav"
>
  <ul
    className="workspace-nav-list"
  >
    <WorkspaceNavComponent
      component={
        Object {
          "branchLike": undefined,
          "key": "foo",
        }
      }
      key="component-foo"
      onClose={[MockFunction]}
      onOpen={[MockFunction]}
    />
    <WorkspaceNavComponent
      component={
        Object {
          "branchLike": undefined,
          "key": "bar",
        }
      }
      key="component-bar"
      onClose={[MockFunction]}
      onOpen={[MockFunction]}
    />
  </ul>
</nav>
`;

exports[`should render 1`] = `
<nav
  className="workspace-nav"
>
  <ul
    className="workspace-nav-list"
  >
    <WorkspaceNavComponent
      component={
        Object {
          "branchLike": undefined,
          "key": "foo",
        }
      }
      key="component-foo"
      onClose={[MockFunction]}
      onOpen={[MockFunction]}
    />
    <WorkspaceNavComponent
      component={
        Object {
          "branchLike": undefined,
          "key": "bar",
        }
      }
      key="component-bar"
      onClose={[MockFunction]}
      onOpen={[MockFunction]}
    />
    <WorkspaceNavRule
      key="rule-qux"
      onClose={[MockFunction]}
      onOpen={[MockFunction]}
      rule={
        Object {
          "key": "qux",
          "organization": "org",
        }
      }
    />
  </ul>
</nav>
`;
